# mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/voipbin_mcp/: __init__.py  client.py  server.py
src/voipbin_mcp/tools/: __init__.py  activeflows.py  agents.py  ais.py  billings.py  calls.py  campaigns.py  conferences.py  contacts.py  conversations.py  customer.py  emails.py  extensions.py  flows.py  messages.py  numbers.py  queues.py  routes.py  tags.py
tests/: test_client.py  test_server.py  test_tools_calls.py  test_tools_flows.py
