[project]
name = "voipbin-mcp"
version = "0.1.0"
description = "MCP server for the VoIPbin CPaaS platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "VoIPbin", email = "support@voipbin.net"},
]
keywords = ["mcp", "voipbin", "cpaas", "voip", "telephony", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://voipbin.net"
Repository = "https://github.com/voipbin/mcp"
"Bug Tracker" = "https://github.com/voipbin/mcp/issues"

[project.scripts]
voipbin-mcp = "voipbin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voipbin_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
